position fixed, need to add alignment on blocks

--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -1,4 +1,9 @@
 
-.app{
+.app {
+  position: relative;
   display: flex;
+}
+.contentContainer{
+  position: absolute;
+  left: 10vw
 }
